Added first actions that are based on a WebApp configuration file